# clautify

./: .gitignore  README.md  pyproject.toml  setup.py
clautify/: __init__.py  album.py  artist.py  client.py  login.py  player.py  playlist.py  song.py  status.py  websocket.py
clautify/dsl/: __init__.py  executor.py  grammar.lark  parser.py
clautify/exceptions/: errors.py
clautify/http/: data.py
clautify/types/: annotations.py  data.py
clautify/utils/: __init__.py  pagination.py  strings.py
spotapi/: __init__.py  song.py
spotapi/dsl/: __init__.py  executor.py  grammar.lark  parser.py
spotapi/utils/: saver.py
tests/: conftest.py  test_dsl_executor.py  test_dsl_parser.py  test_dsl_v4.py  test_session.py
